@@ -57,23 +57,16 @@ Joose.Managed.PropertySet = new Joose.Proto.Class('Joose.Managed.PropertySet', {
     
     //includes inherited properties (probably you wants 'eachOwn', which process only "own" (including consumed from Roles) properties) 
     each : function (func, scope) {
-        scope = scope || this
-        
-        Joose.O.each(this.properties, function (property, name) {
-            func.call(scope, property, name)
-        })
+        Joose.O.each(this.properties, func, scope || this)
     },
     
     
     eachOwn : function (func, scope) {
-        scope = scope || this
-        
-        Joose.O.eachOwn(this.properties, function (property, name) {
-            func.call(scope, property, name)
-        })
+        Joose.O.eachOwn(this.properties, func, scope || this)
     },
     
     
+    //synonym for each
     eachAll : function (func, scope) {
         this.each(func, scope)
     },
